subprojects/docs/src/docs/css/base.css
/* ... */
/* Lato (normal, regular) */
@font-face {
  font-display: swap;
  font-family: Lato;
  font-weight: 400;
  font-style: normal;
  text-rendering: optimizeLegibility;
  src: url("https://assets.gradle.com/lato/fonts/lato-normal/lato-normal.woff2") format("woff2"),
       url("https://assets.gradle.com/lato/fonts/lato-normal/lato-normal.woff") format("woff");
}

/* Lato (normal, italic) */
@font-face {
  font-display: swap;
  font-family: Lato;
  font-weight: 400;
  font-style: italic;
  text-rendering: optimizeLegibility;
  src: url("https://assets.gradle.com/lato/fonts/lato-normal-italic/lato-normal-italic.woff2") format("woff2"),
       url("https://assets.gradle.com/lato/fonts/lato-normal-italic/lato-normal-italic.woff") format("woff");
}

/* Lato (bold, regular) */
@font-face {
  font-display: swap;
  font-family: Lato;
  font-weight: 500;
  font-style: normal;
  text-rendering: optimizeLegibility;
  src: url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff2") format("woff2"),
       url("https://assets.gradle.com/lato/fonts/lato-semibold/lato-semibold.woff") format("woff");
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html,
body {
    margin: 0;
    padding: 0;
}

html {
    font-family: "Lato", "Helvetica Neue", Arial, sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 1.5;
}

body {
    color: #02303A;
    background-color: #f7f7f8;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-font-smoothing: antialiased;
}

a {
    color: #1DA2BD;
    text-decoration: none;
}

a:hover, a:focus {
    text-decoration: underline;
}

a strong {
    color: inherit;
}

img {
    max-width: 100%;
}

table {
    margin-bottom: 1rem;
    width: 100%;
    font-size: 85%;
    border: 1px solid #e5e5e5;
    border-collapse: collapse;
}

td,
th {
    padding: .25rem .5rem;
    border: 1px solid #e5e5e5;
}

th {
    text-align: left;
}

.content tbody tr:nth-child(odd) td,
.content tbody tr:nth-child(odd) th {
    background-color: #f9f9f9;
}

/* typography */
h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    margin-bottom: .5rem;
    font-weight: 500;
    line-height: 1.2;
    color: #02303A;
    text-rendering: optimizeLegibility;
}

h1 {
    font-size: 2rem;
}

h2 {
    margin-top: 1.5rem;
    font-size: 1.5rem;
}

h3 {
    margin-top: 1rem;
    font-size: 1.125rem;
}

h4, h5, h6 {
    margin-top: 1rem;
    font-size: 1rem;
}

p {
    font-size: 1.0625rem;
    line-height: 1.6;
    margin-bottom: 1.25rem;
    text-rendering: optimizeLegibility;
}

dt {
    font-weight: bold;
}

dd {
    margin-bottom: .5rem;
    margin-left: 1.5em;
}

hr {
    position: relative;
    border: 0;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #fff;
    margin: 0;
}

ul, ol, dl {
    list-style-position: outside;
    line-height: 1.6;
    margin: 0 0 1.25rem 1.5em;
    padding: 0;
}

ul {
    list-style-type: disc;
}

ol {
    list-style-type: decimal;
}

dl dt {
    font-weight: normal;
}

tfoot {
    font-style: italic;
}

caption {
    background: #eee;
}

abbr, acronym {
    font-size: 85%;
    font-weight: bold;
    color: #555;
    text-transform: uppercase;
}

abbr[title], acronym[title] {
    cursor: help;
    border-bottom: 1px dotted #e5e5e5;
}

b, strong, dfn {
    font-weight: 500;
}

em, dfn {
    font-style: italic;
}

sup, sub {
    line-height: 0;
}

address {
    margin: 0 0 1.5em;
    font-style: italic;
}

del {
    color: #666;
}

blockquote {
    padding: .5rem 1rem;
    margin: .8rem 0;
    color: #7a7a7a;
    border-left: .25rem solid #e5e5e5;
}

blockquote p:first-child {
    margin-top: 0;
}

blockquote p:last-child {
    margin-bottom: 0;
}

@media (min-width: 30em) {
    blockquote {
        padding-right: 5rem;
        padding-left: 1.25rem;
    }
}

/* layout */
.container, .book, .chapter, .footer {
    background-color: white;
    border-radius: 5px;
    max-width: 45rem;
    margin: 2rem auto;
    padding: 1.5rem;
}

.content, .text-container {
    width: 45rem;
}

.content-container {
    min-height: calc(100vh - 60px);
}

.content, .sidebar {
    display: inline-block;
}

.sidebar {
    float: right;
    width: 12.5rem;
}

@media screen and (max-width: 45em) {
    .container, .footer {
        max-width: 100%;
    }
    .content {
        display: block;
        width: auto;
    }
    .sidebar {
        display: none;
    }
    .container, .book, .chapter {
        margin-top: 0;
        margin-bottom: 0;
    }
}

/* code */
code, pre {
    background-color: #f7f7f8;
    border-radius: 4px;
    font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace;
    font-size: 1em;
    font-style: normal;
}

*:not(pre) > code {
    font-size: 0.9375rem;
    letter-spacing: 0;
    padding: 0.1em 0.5ex;
    text-rendering: optimizeSpeed;
    word-spacing: -0.15em;
    word-wrap: break-word;
}

pre {
    line-height: 1.45;
    margin-top: 0;
    margin-bottom: 1.5em;
    padding: 1rem;
}

pre code {
    background-color: transparent;
    color: inherit;
    line-height: 1.45;
    font-size: 100%;
    padding: 0;
}

a code {
    color: #1BA8CB;
}

pre.code, pre.programlisting, pre.screen, pre.tt {
    background-color: #f7f7f8;
    border-radius: 4px;
    font-size: 1em;
    line-height: 1.45;
    margin-bottom: 1.25em;
    overflow-x: auto;
    padding: 1rem;
}

tbody tr:nth-child(even) td, tbody tr.even td {
    background: #F7F7F7;
}

li em, p em {
    padding: 0 1px;
}

code em, tt em {
    text-decoration: none;
}

/* util classes */
.left {
    float: left !important;
}

p .left {
    margin: 1.5em 1.5em 1.5em 0;
    padding: 0;
}

.right {
    float: right !important;
}

p .right {
    margin: 1.5em 0 1.5em 1.5em;
    padding: 0;
}

.small {
    font-size: .8em;
    margin-bottom: 1.875em;
    line-height: 1.875em;
}

.large {
    font-size: 1.2em;
    line-height: 2.5em;
    margin-bottom: 1.25em;
}

.hide {
    display: none;
}
/* ... */

